EA2_LYC_2020_1C/y.output
Gramática

    0 $accept: S $end

    1 S: mult

    2 mult: lista exp

    3 lista: ID ASIG
    4      | lista ID ASIG

    5 exp: exp SUMA term
    6    | term

    7 term: term MUL factor
    8     | factor

    9 factor: ID
   10       | CONST


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
CONST (258) 10
ID (259) 3 4 9
ASIG (260) 3 4
MUL (261) 7
SUMA (262) 5


No terminales con las reglas donde aparecen

$accept (8)
    en la izquierda: 0
S (9)
    en la izquierda: 1, en la derecha: 0
mult (10)
    en la izquierda: 2, en la derecha: 1
lista (11)
    en la izquierda: 3 4, en la derecha: 2 4
exp (12)
    en la izquierda: 5 6, en la derecha: 2 5
term (13)
    en la izquierda: 7 8, en la derecha: 5 6 7
factor (14)
    en la izquierda: 9 10, en la derecha: 7 8


estado 0

    0 $accept: . S $end

    ID  desplazar e ir al estado 1

    S      ir al estado 2
    mult   ir al estado 3
    lista  ir al estado 4


estado 1

    3 lista: ID . ASIG

    ASIG  desplazar e ir al estado 5


estado 2

    0 $accept: S . $end

    $end  desplazar e ir al estado 6


estado 3

    1 S: mult .

    $default  reduce usando la regla 1 (S)


estado 4

    2 mult: lista . exp
    4 lista: lista . ID ASIG

    CONST  desplazar e ir al estado 7
    ID     desplazar e ir al estado 8

    exp     ir al estado 9
    term    ir al estado 10
    factor  ir al estado 11


estado 5

    3 lista: ID ASIG .

    $default  reduce usando la regla 3 (lista)


estado 6

    0 $accept: S $end .

    $default  aceptar


estado 7

   10 factor: CONST .

    $default  reduce usando la regla 10 (factor)


estado 8

    4 lista: lista ID . ASIG
    9 factor: ID .

    ASIG  desplazar e ir al estado 12

    $default  reduce usando la regla 9 (factor)


estado 9

    2 mult: lista exp .
    5 exp: exp . SUMA term

    SUMA  desplazar e ir al estado 13

    $default  reduce usando la regla 2 (mult)


estado 10

    6 exp: term .
    7 term: term . MUL factor

    MUL  desplazar e ir al estado 14

    $default  reduce usando la regla 6 (exp)


estado 11

    8 term: factor .

    $default  reduce usando la regla 8 (term)


estado 12

    4 lista: lista ID ASIG .

    $default  reduce usando la regla 4 (lista)


estado 13

    5 exp: exp SUMA . term

    CONST  desplazar e ir al estado 7
    ID     desplazar e ir al estado 15

    term    ir al estado 16
    factor  ir al estado 11


estado 14

    7 term: term MUL . factor

    CONST  desplazar e ir al estado 7
    ID     desplazar e ir al estado 15

    factor  ir al estado 17


estado 15

    9 factor: ID .

    $default  reduce usando la regla 9 (factor)


estado 16

    5 exp: exp SUMA term .
    7 term: term . MUL factor

    MUL  desplazar e ir al estado 14

    $default  reduce usando la regla 5 (exp)


estado 17

    7 term: term MUL factor .

    $default  reduce usando la regla 7 (term)
